fixed spacing for alert messages

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14473,8 +14473,7 @@ body {
 }
 
 .message-spacing {
-  padding-top: 3.4rem;
-  top: 0;
+  top: 3.4rem;
   position: -webkit-sticky;
   position: sticky;
   z-index: 999;
