--- a/resources/sass/_blog.scss
+++ b/resources/sass/_blog.scss
@@ -60,8 +60,7 @@ body {
 }
 
 .message-spacing {
-    padding-top: 3.4rem;
-    top: 0;
+    top: 3.4rem;
     position: sticky;
     z-index: 999;
  }
